[package]
authors = ["Jan Gosmann <jan@hyper-world.de>"]
categories = ["embedded"]
description = "Rust API to the Bosch BSEC library."
edition = "2018"
keywords = ["bindings", "bsec"]
license = "MIT OR Apache-2.0"
name = "bsec"
readme = "README.md"
repository = "https://github.com/jgosmann/bsec"
version = "0.3.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bme680 = {version = "0.5.1", optional = true}
embedded-hal = {version = "0.2.5", optional = true}
libalgobsec-sys = "0.1.0"
nb = "1.0.0"

[dev-dependencies]
bme680 = "0.5.1"
embedded-hal = "0.2.5"
serial_test = "0.5.1"

[features]
docs-rs = []
test-support = []
use-bme680 = ["bme680", "embedded-hal"]

[package.metadata.docs.rs]
features = ["docs-rs", "test-support", "use-bme680"]
