[package]
authors = ["Jan Gosmann <jan@hyper-world.de>"]
categories = ["embedded"]
description = "Rust API to the Bosch BSEC library."
edition = "2018"
keywords = ["bindings", "bsec"]
license = "MIT OR Apache-2.0"
name = "bsec"
readme = "README.md"
repository = "https://github.com/jgosmann/bsec"
version = "0.6.0+1.4.9.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bme680 = { git = "https://github.com/nand-nor/bme680.git", rev = "1e3acb1", optional = true}
embedded-hal = {version = "1", optional = true}
libalgobsec-sys = "0.3.0"
nb = "1.0.0"

[dev-dependencies]
bme680 = { git = "https://github.com/nand-nor/bme680.git", rev = "1e3acb1" }
embedded-hal = "1"
serial_test = "1.0.0"

[features]
docs-rs = []
test-support = []
use-bme680 = ["bme680", "embedded-hal"]

[package.metadata.docs.rs]
features = ["docs-rs", "test-support", "use-bme680"]
